More typo fixes from Emily Alinder
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@67042 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/more.tex
+++ b/more.tex
@@ -2213,7 +2213,7 @@ it has enabled thousands of software developers to build their own
 customized Twitter-based software.  These additional applications greatly
 increase the value of Twitter far beyond simply a web site.  The 
 Twitter web services allow the building of whole new applications that
-the Twitter team may never of thought of.  It is said that over 90 percent
+the Twitter team may never have thought of.  It is said that over 90 percent
 of the use of Twitter is through the API (i.e. not through the {\tt twitter.com}
 web user interface).
 
