--- a/more.tex
+++ b/more.tex
@@ -2475,6 +2475,357 @@ huge_idea
 
 \chapter{Automating common tasks}
 
+One of the great advantages of the Python language is the ability
+to write programs that scan through your computer and 
+perform some operation on each file.  These scripts
+can make short work of simple tasks that must be done to files
+spread across a directory tree.
+
+\section{Example: Cleaning up a photo directory}
+
+I will start with a simple real example problem and then walk through 
+the solution in a series of simple Python scripts.  I had built a 
+bit of Flickr-like software that stored my cell-phone photos on a server
+when I would send the photos to the server using E-Mail or MMS.  I wrote
+this before Flickr existed and kept using it after Flickr existed because
+I wanted to keep original copies of my images forever.
+
+I would also send a simple one-line text description in the MMS message
+or the subject line of the E-Mail message.  I stored these messages
+in a text file in the same directory as the image file.   I had come up 
+with a directory structure based on the month, year, day and time the 
+photo was taken.   The following would be an example of the naming for 
+one photo and its existing description:
+
+\beforeverb
+\begin{verbatim}
+./2006/03/24-03-06_2018002.jpg
+./2006/03/24-03-06_2018002.txt
+\end{verbatim}
+\afterverb
+%
+After seven years, I had a lot of photos and captions.  But over the years
+as I switched cell phones, sometimes my code to pull out the caption would
+break and add a bunch of useless data from the message instead of a caption.  
+
+So I wanted to go through these files and figure out which of the 
+text files were really captions and which were junk and then delete the bad
+files.  The first thing to do was to get a simple inventory of 
+how many text files I had all in all of the sub-folders
+using the following program:
+
+\beforeverb
+\begin{verbatim}
+import os
+count = 0
+for (dirname, dirs, files) in os.walk('.'):
+   for filename in files:
+       if filename.endswith('.txt') :
+           count = count + 1
+
+print 'Files:', count
+
+python txtcount.py
+Files: 1917
+\end{verbatim}
+\afterverb
+%
+The key bit of code that makes this possible is the {\tt os.walk}
+library in Python.  When we call {\tt os.walk} and give it a starting
+directory, it will ``walk'' through all of the directories 
+and subdirectories recursively.   The string ``.'' indiates
+to start in the current directory and walk downard.
+As it encounters each directory,
+we get three values in a tuple.  The first value is the curent
+directory name, the second value is the list of sub-directories 
+in the current directory, and the third value is a list of files
+in the current directory.
+
+We do not have to explicitly look into each of the sub-folders
+because we can count on {\tt os.walk} to visit every 
+folder eventually.  But we do want to look at each file so 
+we write a simple {\tt for} loop to loop throu the files 
+int he current directory.   We check each file to see if 
+it ends with ``.txt'' and then count the number of 
+files through the whole directory tree that end with the
+suffix ``.txt''.
+
+Once we have a sense of how many of these files, the next
+thing to do is try to figure out a way to automatically
+figure out in Python which files are bad and which files
+are good.   So we write a simpe program to print out the
+files and the size of each file:
+
+\beforeverb
+\begin{verbatim}
+import os
+from os.path import join
+for (dirname, dirs, files) in os.walk('.'):
+   for filename in files:
+       if filename.endswith('.txt') :
+           thefile = os.path.join(dirname,filename)
+           print os.path.getsize(thefile), thefile
+\end{verbatim}
+\afterverb
+%
+Now instead of just counting the files, we create 
+a file name by concatening the directory name with
+the name of the file within the directory using
+{\tt os.path.join}.   It is important to use 
+{\tt os.path.join} because on Windows we use a backslash
+(\verb"\") to construct file paths and on Linux
+or Apple we use a forward slash (\verb"/") 
+to construct file paths.  The {\tt os.path.join}
+knows these differences and knows what system
+we are running on and it does the proper concatenation
+depending on the system.  So the same Python code
+runs on either Windows or UNIX-style systems.
+
+Once we have the full file name with directory
+path, we use the {\tt os.path.getsize} utility
+to get the size and print it out, producing the 
+following output:
+
+\beforeverb
+\begin{verbatim}
+python txtsize.py
+...
+18 ./2006/03/24-03-06_2303002.txt
+22 ./2006/03/25-03-06_1340001.txt
+22 ./2006/03/25-03-06_2034001.txt
+...
+2565 ./2005/09/28-09-05_1043004.txt
+2565 ./2005/09/28-09-05_1141002.txt
+...
+2578 ./2006/03/27-03-06_1618001.txt
+2578 ./2006/03/28-03-06_2109001.txt
+2578 ./2006/03/29-03-06_1355001.txt
+...
+\end{verbatim}
+\afterverb
+%
+Scanning the output, we notice that some files are pretty short and 
+a lot of the files are pretty large and the same size (2578 and 2565). 
+When we take a look at a few of these larger files by hand, 
+it looks like the large 
+files are a generic bit of HTML that was came in from mail 
+sent to my system from my T-Mobile phone:
+
+\beforeverb
+\begin{verbatim}
+<html>
+        <head>
+                <title>T-Mobile</title>
+...
+\end{verbatim}
+\afterverb
+%
+Skimming through the file, it looks like there is no good information
+in these files so we can probably delete them and perhaps we should
+just delete all of the files that have any HTML in them since 
+these files are supposed to be captions and not contain HTML.
+
+But before we delete the files, lets write a program to look for files
+that are more than one line long and show the contents of the file.
+But lets not bother showing ourselves those files that are exactly
+2578 or 2565 characters long since we know that these files have no useful
+information.
+
+So we write the following program:
+\beforeverb
+\begin{verbatim}
+import os
+from os.path import join
+for (dirname, dirs, files) in os.walk('.'):
+   for filename in files:
+       if filename.endswith('.txt') :
+           thefile = os.path.join(dirname,filename)
+           size = os.path.getsize(thefile)
+           if size == 2578 or size == 2565:
+               continue
+           fhand = open(thefile,"r")
+           lines = list()
+           for line in fhand:
+               lines.append(line)
+           if len(lines) > 1:
+                print len(lines), thefile
+                print lines[:4]
+\end{verbatim}
+\afterverb
+%
+We use a {\tt contiue} to skip files with the two 
+``bad sizes'' and then open the rest of the files
+and read the lines of the file into a Python list
+and if the file has more than one line we print
+out how many lines are in the file and print out
+the first three lines.
+
+It looks like filtering out those two bad file sizes, and assuming
+that all one line files are OK, we are down to some pretty clean
+data:
+
+\beforeverb
+\begin{verbatim}
+python txtcheck.py 
+3 ./2004/03/22-03-04_2015.txt
+['Little horse rider\r\n', '\r\n', '\r']
+2 ./2004/11/30-11-04_1834001.txt
+['Testing 123.\n', '\n']
+3 ./2007/09/15-09-07_074202_03.txt
+['\r\n', '\r\n', 'Sent from my iPhone\r\n']
+3 ./2007/09/19-09-07_124857_01.txt
+['\r\n', '\r\n', 'Sent from my iPhone\r\n']
+3 ./2007/09/20-09-07_115617_01.txt
+\end{verbatim}
+\afterverb
+%
+But there is one more annoying pattern of files, 
+there are some three line files that consist of
+two blank lines followed by a line that says
+``Sent from my iPhone'' that have slipped 
+into my data.   So we make the following change
+to the program to deal with these files as well.
+
+\beforeverb
+\begin{verbatim}
+           lines = list()
+           for line in fhand:
+               lines.append(line)
+           if len(lines) == 3 and lines[2].startswith('Sent from my iPhone') :
+               continue
+           if len(lines) > 1:
+                print len(lines), thefile
+                print lines[:4]
+\end{verbatim}
+\afterverb
+%
+We simply check if we have a three line file and if the third 
+line starts with the specified text, we skip it.
+
+Now when we run the program, we only see four remaining 
+multi-line files and all of those files look pretty reasonable:
+\beforeverb
+\begin{verbatim}
+python txtcheck2.py 
+3 ./2004/03/22-03-04_2015.txt
+['Little horse rider\r\n', '\r\n', '\r']
+2 ./2004/11/30-11-04_1834001.txt
+['Testing 123.\n', '\n']
+2 ./2006/03/17-03-06_1806001.txt
+['On the road again...\r\n', '\r\n']
+2 ./2006/03/24-03-06_1740001.txt
+['On the road again...\r\n', '\r\n']
+\end{verbatim}
+\afterverb
+%
+If you look at the overall pattern of this program,
+we have successively refined how we accept or reject
+files and once we found a pattern that was 'bad' we used
+{\tt continue} to skip the bad files so we could refine
+our code to find more file patterns that were bad.
+
+Now we are getting ready to delete the files and so 
+we are going to flip the logic and instead of printing out 
+the ``remaining good files'', we will print out the ``bad''
+files that we are about to delete.
+\beforeverb
+\begin{verbatim}
+import os
+from os.path import join
+for (dirname, dirs, files) in os.walk('.'):
+   for filename in files:
+       if filename.endswith('.txt') :
+           thefile = os.path.join(dirname,filename)
+           size = os.path.getsize(thefile)
+           if size == 2578 or size == 2565:
+               print 'T-Mobile:',thefile
+               continue
+           fhand = open(thefile,"r")
+           lines = list()
+           for line in fhand:
+               lines.append(line)
+           if len(lines) == 3 and lines[2].startswith('Sent from my iPhone') :
+               print 'iPhone:', thefile
+               continue
+\end{verbatim}
+\afterverb
+%
+So we can now see a list of candidate files that we are about
+to delete and why these files are up for deleting.
+The program produces the following output:
+\beforeverb
+\begin{verbatim}
+python txtcheck3.py
+...
+T-Mobile: ./2006/05/31-05-06_1540001.txt
+T-Mobile: ./2006/05/31-05-06_1648001.txt
+iPhone: ./2007/09/15-09-07_074202_03.txt
+iPhone: ./2007/09/15-09-07_144641_01.txt
+iPhone: ./2007/09/19-09-07_124857_01.txt
+...
+\end{verbatim}
+\afterverb
+%
+We can spot-check these files to make sure that we did not inadvertently
+end up introducing a bug in our program or perhaps our logic 
+caught some files we did not want to catch.
+
+Once we are satisfied that this is the list of files we want to delete,
+we make the following change to the program:
+\beforeverb
+\begin{verbatim}
+           if size == 2578 or size == 2565:
+               print 'T-Mobile:',thefile
+               os.remove(thefile)
+               continue
+...
+           if len(lines) == 3 and lines[2].startswith('Sent from my iPhone') :
+               print 'iPhone:', thefile
+               os.remove(thefile)
+               continue
+\end{verbatim}
+\afterverb
+%
+In this version of the program, we will both print the file out 
+and remove the bad files
+using {\tt os.remove}.
+Just for fun, run the program a second time and it will produce no output
+since the bad files are already gone.
+
+\beforeverb
+\begin{verbatim}
+python txtdelete.py 
+T-Mobile: ./2005/01/02-01-05_1356001.txt
+T-Mobile: ./2005/01/02-01-05_1858001.txt
+...
+\end{verbatim}
+\afterverb
+%
+If we rerun {\tt txtcount.py} we can see that we have removed
+around 900 bad files:
+\beforeverb
+\begin{verbatim}
+python txtcount.py 
+Files: 1018
+\end{verbatim}
+\afterverb
+%
+In this section, we have followed a sequence where we use Python 
+to first look through directories and files looking for 
+patterns.  We slowly use Python to help determine what we 
+want to do to clean up our directories.  Once we
+figure out which files are good and which files are 
+not useful, we use Python to delete the files and 
+perform the cleanup.
+
+The problem you may need to solve can either be quite simple 
+and might only depend on looking at the names of files,
+or perhaps you need to read every single file and
+look for patterns within the files.  Sometimes 
+you will need to read all the files and make a change 
+to some or of the files.  All of these are pretty 
+straighforward once you understand how {\tt os.walk}
+and the other {\tt os} utilities can be used.
 
 \section{Filenames and paths}
 \label{paths}
@@ -2573,42 +2924,6 @@ in the given directory:
 \end{verbatim}
 \afterverb
 %
-To demonstrate these functions, the following example
-``walks'' through a directory, prints
-the names of all the files, and calls itself recursively on
-all the directories.
-
-\index{walk, directory}
-\index{directory!walk}
-
-\beforeverb
-\begin{verbatim}
-def walk(dir):
-    for name in os.listdir(dir):
-        path = os.path.join(dir, name)
-
-        if os.path.isfile(path):
-            print path
-        else:
-            walk(path)
-\end{verbatim}
-\afterverb
-%
-{\tt os.path.join} takes a directory and a file name and joins
-them into a complete path.  
-
-\begin{ex}
-Modify {\tt walk} so that instead of printing the names of
-the files, it returns a list of names.
-\end{ex}
-
-\begin{ex}
-The {\tt os} module provides a function called {\tt walk}
-that is similar to this one but more versatile.  Read
-the documentation and use it to print the names of the
-files in a given directory and its subdirectories.
-\end{ex}
-
 
 \section{Pipes}
 
@@ -2675,29 +2990,6 @@ None
 %
 The return value is the final status of the {\tt ls} process;
 {\tt None} means that it ended normally (with no errors).
-
-\index{file!compression}
-\index{compression!file}
-\index{Unix command!gunzip}
-\index{gunzip (Unix command)}
-
-A common use of pipes is to read a compressed file incrementally;
-that is, without uncompressing the whole thing at once.  The
-following function takes the name of a compressed file as a
-parameter and returns a pipe that uses {\tt gunzip} to decompress
-the contents:
-
-\beforeverb
-\begin{verbatim}
-def open_gunzip(filename):
-    cmd = 'gunzip -c ' + filename
-    fp = os.popen(cmd)
-    return fp
-\end{verbatim}
-\afterverb
-%
-If you read lines from {\tt fp} one at a time, you never have
-to store the uncompressed file in memory or on disk.
 
 \section{Exercises}
 
